# brain-percentile-grids

./: .gitignore  README.md  documentation.txt  grids_database.db  pyproject.toml  requirements.txt
app/core/: __init__.py
app/core/data_processing/: db_utils.py  process_input.py
app/core/engine/: environment.py  model.py  selector.py
app/core/resources/: model_candidates.py
app/core/utils/: data_cache.py  data_fingerprinting.py  persistent_cache.py
app/fastapi/: config.py  dependencies.py  main.py
app/fastapi/auth/: __init__.py  dependencies.py  schemas.py  security.py
app/fastapi/db/: database.py  models.py
app/fastapi/models/: requests.py  responses.py
app/fastapi/routers/: auth.py  calculations.py  data.py  health.py
app/fastapi/services/: calculation.py  reference_data.py
app/fastapi/utils/: cache.py  file_utils.py  global_data_manager.py  model_wrapper.py
